# teelogger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: logger.h  main.h
man/: teelogger.1
src/: logger.c  main.c
